test/errors/type/str/isal.yasl
mt.lookup('', .isal)(1)
